cluster/cozezone/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-web
  namespace: cozezone
  labels:
    app: cozezone
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: cozezone
      service: web
  template:
    metadata:
      labels:
        app: cozezone
        service: web
    spec:
      volumes:
        - name: mastodon-system
          emptyDir: {}
      securityContext:
        runAsUser: 991
        runAsGroup: 991
      containers:
        - name: mastodon-web
          image: tootsuite/mastodon:v3.3.0
          command: [/bin/bash, -c, bundle exec rake assets:precompile && bundle exec rake db:migrate --trace && bundle exec rails s -p 3000 -b 0.0.0.0]
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /mastodon/public/system
              name: mastodon-system
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 5
        - name: mastodon-sidekiq
          image: tootsuite/mastodon:v3.3.0
          command: [bundle, exec, sidekiq]
          ports:
            - containerPort: 4000
              protocol: TCP
          volumeMounts:
            - mountPath: /mastodon/public/system
              name: mastodon-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-streaming
  namespace: cozezone
  labels:
    app: cozezone
    service: streaming
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: cozezone
      service: streaming
  template:
    metadata:
      labels:
        app: cozezone
        service: streaming
    spec:
      securityContext:
        runAsUser: 991
        runAsGroup: 991
      containers:
        - name: mastodon-streaming
          image: tootsuite/mastodon:v3.3.0
          command: [node, ./streaming]
          ports:
            - containerPort: 4000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: cozezone-web
  namespace: cozezone
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: cozezone
    service: web
---
apiVersion: v1
kind: Service
metadata:
  name: cozezone-streaming
  namespace: cozezone
  labels:
    service: streaming
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: cozezone
    service: streaming
